# hamiltonian_path_discovery

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  PROJECT_TRACKER.md  README.md  pyproject.toml  requirements.txt  run_hampath.py  setup.py
benchmarks/: ham_path_10v_14.cnf.npy  ham_path_10v_6.cnf.npy  ham_path_11v_0.cnf.npy  ham_path_11v_9.cnf.npy  ham_path_12v_1.cnf.npy  ham_path_12v_11.cnf.npy  ham_path_12v_5.cnf.npy  ham_path_12v_7.cnf.npy  ham_path_13v_2.cnf.npy  ham_path_13v_3.cnf.npy  ham_path_15v_0.npy  ham_path_15v_1.npy  ham_path_15v_10.npy  ham_path_15v_13.npy  ham_path_15v_2.npy  ham_path_15v_3.npy  ham_path_15v_4.npy  ham_path_15v_8.npy  ham_path_15v_9.npy  ham_path_16v_0.npy  ham_path_16v_1.npy  ham_path_16v_11.npy  ham_path_16v_12.npy  ham_path_16v_3.npy  ham_path_16v_4.npy  ham_path_16v_7.npy  ham_path_16v_9.cnf.npy  ham_path_17v_1.npy  ham_path_17v_11.npy  ham_path_17v_13.npy  ham_path_17v_2.npy  ham_path_17v_3.npy  ham_path_17v_4.npy  ham_path_17v_8.npy  ham_path_18v_0.npy  ham_path_18v_10.npy  ham_path_18v_12.cnf.npy  ham_path_18v_5.npy  ham_path_18v_7.npy  ham_path_19v_0.cnf.npy  (+101 more)
docs/: iteration_process.md  project_tracker.md  verification_process.md
examples/: create_benchmarks.py  full_pipeline.py  monitor_energy.py  prompt_engineering.py  run_benchmarks.py  test_api.py
results/: pattern_state_latest.json
src/: __init__.py  benchmark.py  continuous_improvement.py  energy_monitor.py  graph_analyzer.py  solution_evaluator.py  solution_validator.py  theoretical_analyzer.py
tests/: test_components.py  test_conflict_learning.py  (+10 more)
(+1761 files in other folders)
